syntax = "proto3";

package user;


service UserService {
    rpc Create(UserRequest) returns (UserResponse) {}
    rpc GetUserById(IdRequest) returns (UserResponse) {}
    rpc GetUserForClient(IdRequest) returns (UserResponse) {}
    rpc GetUsers(UserForGetUsers) returns (Users) {}
    rpc UpdateUser(UserRequest) returns (UserForUpdate) {}
    rpc DeleteUser(IdRequest) returns (UserForUpdate) {}
    rpc CheckField(CheckFieldReq) returns (CheckFieldRes) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc UpdateToken(RequestForTokens) returns (LoginResponse) {}

}

message PostForCreate {
    string poster_id= 1;
    string description_post= 2;
}

message RequestForTokens {
    string id = 1;
    string acces_token = 2;
    string refresh_token = 3;
}


message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string user_name = 5;
    string acces_token = 6;
    string refresh_token = 7;   
    string user_type = 8;
}

message CheckFieldReq {
    string field = 1;
    string value = 2;
}

message CheckFieldRes {
    bool exists = 1;
}

message UserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string user_type = 4;
    string password = 5;
    string user_name = 6;
    string refresh_token = 8;
    PostForCreate posts=9;
}

message UserForUpdate {
    string id = 1;
    string name = 2;
    string email = 3;
    string created_at =4; 
    string updated_at = 5;
    string password =6;
    string user_name = 7;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string user_type = 4;
    string password = 5;
    string user_name = 6;
    string refresh_token = 7;
    repeated Post posts=8;
    string created_at = 9;
    string updated_at = 10;
    string acces_token = 11;
}

message Users {
    repeated UserResponse users = 1;
}

message Post {
    int64 id= 1;
    string title = 2;
    string description=3;
    repeated Comments comments = 4;
    string created_at = 5;
    string updated_at = 6;
}

message IdRequest {
    string id = 1;
}

message UserForGetUsers {
    int64 limit = 1;
    int64 page = 2;
}

message Comments {
    int64 user_id = 1;
    int64 post_id = 2;
    string text = 3;
}